# Calculator

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  shunting_yard copy.hpp  shunting_yard.hpp
Calculator/: CMakeLists.txt
Calculator/include/: Calculator.h  ReversePolishNotation.h  ShuntingYard.h
Calculator/src/: Calculator.cpp  ReversePolishNotation.cpp  ShuntingYard.cpp
